cabal-version: 2.4
name: atp
version: 0.1.0.0
synopsis: Bindings to automated theorem provers
description:
  Express theorems in first-order logic and automatically prove them using
  third-party reasoning tools.
homepage: https://github.com/aztek/atp
bug-reports: https://github.com/aztek/tptp/issues
license: GPL-3.0-only
license-file: LICENSE
author: Evgenii Kotelnikov
maintainer: evgeny.kotelnikov@gmail.com
category: Theorem Provers, Formal Methods, Logic, Math
tested-with:
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5

source-repository head
  type: git
  location: git://github.com/aztek/tptp.git

flag Werror
  default: False
  manual: True

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    ATP
    ATP.Codec.TPTP
    ATP.FOL
  ghc-options:
    -Wall
  if flag(Werror)
    ghc-options: -Werror
  build-depends:
    base         >= 4.5     && < 5.0,
    text         >= 1.2.3   && < 1.3,
    tptp         >= 0.1.0.3 && < 0.2,
    containers   >= 0.5.9   && < 0.7,
    mtl          >= 2.2     && < 3.0
  if impl(ghc < 8)
    ghc-options:
      -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns
    build-depends:
      semigroups >= 0.18  && < 1.0
  if impl(ghc >= 8)
    ghc-options:
      -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wredundant-constraints

test-suite quickcheck-suite
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: Haskell2010
  main-is: QuickCheckSpec/Main.hs
  other-modules:
    QuickCheckSpec.Generators
  ghc-options:
    -Wall -threaded
  if flag(Werror)
    ghc-options: -Werror
  build-depends:
    base,
    containers,
    text,
    generic-random >= 1.2.0.0 && < 1.3,
    QuickCheck     >= 2.4     && < 3.0,
    atp

test-suite doctests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: Haskell2010
  main-is: DocTests/Main.hs
  other-modules:
    QuickCheckSpec.Generators
  ghc-options:
    -Wall -threaded
  if flag(Werror)
    ghc-options: -Werror
  -- TODO: Make it work for older GHCs
  if impl(ghc < 8.4)
    buildable: False
  build-depends:
    base,
    containers,
    text,
    generic-random >= 1.2.0.0 && < 1.3,
    QuickCheck     >= 2.4     && < 3.0,
    atp,
    doctest
